--- a/KnnParsenWindow.ipynb
+++ b/KnnParsenWindow.ipynb
@@ -8,6 +8,8 @@
     "## Universidad Politécnica Salesiana\n",
     "### Por Alexander Siavichay\n",
     "\n",
+    "Disponible en:https://github.com/siavichay/knearest-ParsenWindow/blob/master/KnnParsenWindow.ipynb\n",
+    "\n",
     "En el presente código tenemos un código K-nearest replicado a la Ventana de Parzen\n",
     "\n",
     "Prerequisitos:\n",
@@ -336,7 +338,7 @@
     "El algoritmo de la Ventana de Parzen conocido también como la Ventana de Parzen-Rosenblatt es un método no paramétrico que calcula la función de densidad de probabilidad (pdf) de un punto específico de p(x) a partir de una muestra p(xn) sin la necesidad de especificar una una distribución o conocimiento previo.\n",
     "\n",
     "Nuestro objetivo\n",
-    "![parzen_goal.png](attachment:parzen_goal.png)\n",
+    "![https://raw.githubusercontent.com/siavichay/knearest-ParsenWindow/master/parzen_goal.png](attachment:parzen_goal.png)\n",
     "Fuente:https://sebastianraschka.com/images/blog/2014\n"
    ]
   },
